--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <li>
           <p class="nav"><ins>Home</ins></p>
         </li>
-
         <li>
           <a target="_self" href="./news.html">News</a>
         </li>
@@ -32,5 +31,6 @@
       <h2>Copywright 2024 | Landon Frailey | Tooele Technical College</h2>
       <h3>Last Updated: 8/19/2024 1:37:16</h3>
     </footer>
+    <script src="./weather-header.js"></script>
   </body>
 </html>
