--- a/weather.html
+++ b/weather.html
@@ -77,5 +77,6 @@
       <h2>Copywright 2024 | Landon Frailey | Tooele Technical College</h2>
       <h3>Last Updated: 8/19/2024 1:37:16</h3>
     </footer>
+    <script src="./weather-header.js"></script>
   </body>
 </html>
