--- a/weather.html
+++ b/weather.html
@@ -26,52 +26,9 @@
         </li>
       </ul>
     </nav>
-    <main>
-      <section id="today-text">
-        <h2>Weather Summary</h2>
-        <h3>Salt Lake City</h3>
-        <p>Currently: partly cloudy</p>
-        <p>Tempature: 93 °F</p>
-        <p>Feels like: 90 °F</p>
-        <p>Humidity: 25%</p>
-        <p>Wind Speed: N 8 mph</p>
-      </section>
-      <figure>
-        <img src="./weather/partlyCloudy.jpg" alt="partlyCloudy" id="today" />
-      </figure>
-      <h2 class="five-day-text">5-Day Weather Forcast</h2>
-      <figure>
-        <img src="./weather/Umbrella.jpg" alt="rainy" class="fiveday" />
-        <p class="five-day-text">Day 1 | 105 °F</p>
-      </figure>
-      <figure>
-        <img src="./weather/Sunny.jpg" alt="sunny" class="fiveday" />
-        <p class="five-day-text">Day 2 | 103 °F</p>
-      </figure>
-      <figure>
-        <img
-          src="./weather/partlyCloudy.jpg"
-          alt="partlyCloudy"
-          class="fiveday"
-        />
-        <p class="five-day-text">Day 3 | 102 °F</p>
-      </figure>
-      <figure>
-        <img
-          src="./weather/thunderStorms.jpg"
-          alt="thunderStorms"
-          class="fiveday"
-        />
-        <p class="five-day-text">Day 4 | 95 °F</p>
-      </figure>
-      <figure>
-        <img
-          src="./weather/partlyCloudy.jpg"
-          alt="partlyCloudy"
-          class="fiveday"
-        />
-        <p class="five-day-text">Day 5 | 102 °F</p>
-      </figure>
+    <div class="today-text">
+      <h2>Weather Summary</h2>
+    </div>
     </main>
     <footer>
       <h2>Copywright 2024 | Landon Frailey | Tooele Technical College</h2>
