--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
     </nav>
     <main></main>
     <footer>
-      <h2>Copywright 2024 | Landon Frailey | Tooele Technical College</h2>
-      <h3>Last Updated: 8/19/2024 1:37:16</h3>
+      <h2>
+        © <span id="year"></span> | Landon Frailey | Utah |
+        <a
+          href="https://tooeletech.edu"
+          id="ttechlink"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Tooele Technical College</a
+        >
+      </h2>
+      <h3>Last Updated: <span id="date">Tues 27 Aug 2024</span></h3>
     </footer>
-    <script src="./weather-header.js"></script>
+    <script src="./date.js"></script>
   </body>
 </html>
