--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App V2</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
@@ -27,39 +27,22 @@
       </ul>
     </nav>
     <main>
-      <section>
-        <article class="articles">
-          <h3>Missing Cat</h3>
-          <img id="pictures" src="./news/cat_photo1.jpg" alt="main article" />
-          <h2>
-            <a id="header-article"></a>
-          </h2>
-          <p>
-            If you've seen this cat wandering around Salt Lake City, please read
-            this for more details
-          </p>
-        </article>
-        <article class="articles">
-          <h3>iPhone 16 is now out</h3>
-          <img id="pictures" src="./news/iphone.jpg" alt="main article" />
-          <p>Come check out all of the new features iPhone 16 has to offer</p>
-        </article>
-        <article class="articles">
-          <h3>SpaceX plans to send people to Mars</h3>
-          <img id="pictures" src="./news/spacex.jpg" alt="main article" />
-          <p id="article-desc-1">See then newest space-cutting technology</p>
-        </article>
-        <article class="articles">
-          <h3>Superhumans Coming Soon</h3>
-          <img id="pictures" src="./news/superhumans.jpg" alt="main article" />
-          <p>Genetics will soon allow humans to select traits</p>
-        </article>
-      </section>
+      <div class="news-box"></div>
     </main>
     <footer>
-      <h2>Copywright 2024 | Landon Frailey | Tooele Technical College</h2>
-      <h3>Last Updated: 8/19/2024 1:37:16</h3>
+      <h2>
+        © <span id="year"></span> | Landon Frailey | Utah |
+        <a
+          href="https://tooeletech.edu"
+          id="ttechlink"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Tooele Technical College</a
+        >
+      </h2>
+      <h3>Last Updated: <span id="date">Tues 27 Aug 2024</span></h3>
     </footer>
-    <script src="./weather-header.js"></script>
+    <script src="./news.js"></script>
+    <script src="./date.js"></script>
   </body>
 </html>
