--- a/weather.html
+++ b/weather.html
@@ -26,14 +26,24 @@
         </li>
       </ul>
     </nav>
-    <div class="today-text">
+    <div class="weather-box">
       <h2>Weather Summary</h2>
     </div>
     </main>
     <footer>
-      <h2>Copywright 2024 | Landon Frailey | Tooele Technical College</h2>
-      <h3>Last Updated: 8/19/2024 1:37:16</h3>
+      <h2>
+        © <span id="year"></span> | Landon Frailey | Utah |
+        <a
+          href="https://tooeletech.edu"
+          id="ttechlink"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Tooele Technical College</a
+        >
+      </h2>
+      <h3>Last Updated: <span id="date">Tues 27 Aug 2024</span></h3>
     </footer>
-    <script src="./weather-header.js"></script>
+    <script src="./weather.js"></script>
+    <script src="./date.js"></script>
   </body>
 </html>
